# littleSLAM

./: CMakeLists.txt
app/: run_kitti_stereo.cpp
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
test/: test_triangulation.cpp
